user edit small changes
