# docs/swagger.yaml
@@ -128,6 +128,19 @@ definitions:
       categoryName:
         type: string
     type: object
+  handlers.editUser:
+    properties:
+      Mob:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      status:
+        type: string
+      userName:
+        type: string
+    type: object
   handlers.orderStatus:
     properties:
       status:
@@ -771,6 +784,18 @@ paths:
       consumes:
       - application/json
       description: This will edit  a particular user's information
+      parameters:
+      - description: User ID
+        in: path
+        name: ID
+        required: true
+        type: string
+      - description: User Details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.editUser'
       produces:
       - application/json
       responses:
@@ -790,6 +815,12 @@ paths:
       consumes:
       - application/json
       description: This will block  or unblock a particular user from the system
+      parameters:
+      - description: User ID
+        in: path
+        name: ID
+        required: true
+        type: string
       produces:
       - application/json
       responses:
